--- a/site/config.toml
+++ b/site/config.toml
@@ -2,10 +2,7 @@ baseurl = "/"
 languageCode = "en-us"
 languageLang = "en"
 title = "Baked | Creative Agency | Independent Creative Studio"
-[params]
-  description = "An independent creative agency. Perfect partners as your creative agency of record and a flexible creative resource for individual projects. We work with consumer brands to bring projects to life through our unique creativity."
 
-# RSS, categories and tags disabled for an easy start
-# See configuration options for more details:
-# https://gohugo.io/getting-started/configuration/#toml-configuration
+[params]
+description = "Baked is an independent creative studio working with some of the world’s biggest brands. We’re specialists in world-class content production, 3D animation and creative design."
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
