--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -73,7 +73,7 @@ collections:
         label: "Home Page"
         name: "home"
         fields:
-          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Title", name: "title", widget: "string", required: false}
       - file: "site/content/about/_index.md"
         label: "About Page"
         name: "about"
