fixed meta title mixups and removed preview for work

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -22,6 +22,8 @@ collections:
     folder: "site/content/work"
     create: true
     slug: "{{slug}}"
+    editor:
+      preview: false
     fields:
       - {label: "In Page Title", name: "inPageTitle", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
