--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -37,6 +37,7 @@ collections:
       - {label: "Thumbnail Image", name: "image", widget: "image"}
       - {label: "Thumbnail Video", name: "thumbnailVideo", widget: "file", required: false}
       - {label: "Intro Blurb", name: "intro", widget: "text", required: false}
+      - {label: "Video", name: "video", widget: "text", required: false}
       - label: "Body section"
         name: "sections"
         widget: "list"
