--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -85,7 +85,7 @@ collections:
           - {label: "Meta Title", name: "title", widget: "string", required: false}
           - {label: "Featured Block Link", name: "link", widget: "string", required: true}
           - {label: "Featured Block Title", name: "featuredBlockTitle", widget: "string", required: true}
-          - {label: "Featured Block Copy", name: "featuredBlockcopy", widget: "string", required: true}
+          - {label: "Featured Block Copy", name: "featuredBlockCopy", widget: "string", required: true}
           - {label: "Featured Block Image", name: "image", widget: "image", required: true}
       - file: "site/content/about/_index.md"
         label: "About Page"
