using correct title names across site

--- a/site/data/settings/navigation.yml
+++ b/site/data/settings/navigation.yml
@@ -9,8 +9,8 @@ description: 'Creativity that never comes down. We solve the toughest, tastiest 
 
 brands:
   - {label: 'Under Armour'}
-  - {label: 'Asics'}
-  - {label: 'Timerland'}
+  - {label: 'ASICS'}
+  - {label: 'Timberland'}
   - {label: 'Haglöfs'}
   - {label: 'The North Face'}
 
