--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -87,7 +87,7 @@ collections:
           - {label: "Featured Block Title", name: "featuredBlockTitle", widget: "string", required: true}
           - {label: "Featured Block Copy", name: "featuredBlockCopy", widget: "string", required: true}
           - {label: "Featured Block Image", name: "image", widget: "image", required: true}
-      - file: "site/work/_index.md"
+      - file: "site/content/work/_index.md"
         label: "Work"
         name: "work"
         editor:
@@ -95,7 +95,7 @@ collections:
         fields:
           - {label: "Meta Title", name: "title", widget: "string", required: false}
           - {label: "Meta Description", name: "description", widget: "text"}
-      - file: "site/jobs/_index.md"
+      - file: "site/content/jobs/_index.md"
         label: "Jobs"
         name: "jobs"
         editor:
